--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,21 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "montserrat", sans-serif;
+  background-color: darkslateblue;
+}
+
+header {
+  padding: 3rem 3rem 0;
+}
+
+header h1 {
+  color: #ffffff;
+  font-size: 3rem;
+  font-weight: 500;
+  text-align: center;
 }
