--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
 
 body {
   font-family: "montserrat", sans-serif;
-  background-color: darkslateblue;
+  background-color: rgb(50, 46, 80);
 }
 
 header {
-  padding: 3rem 3rem 0;
+  padding: 3rem 3rem 3rem 0.5rem;
 }
 
 header h1 {
@@ -18,4 +18,10 @@ header h1 {
   font-size: 3rem;
   font-weight: 500;
   text-align: center;
+}
+
+main {
+  width: 100%;
+  max-width: 60%;
+  margin: 0 auto;
 }
