--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,38 @@ main {
   max-width: 60%;
   margin: 0 auto;
 }
+
+.results {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -15px;
+}
+
+.results .result {
+  width: 33.333%;
+  min-width: 250px;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.results .result img {
+  display: block;
+  width: 100%;
+}
+
+.results .result h3 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 10px;
+  background: #445565;
+  flex: 1 1 100%;
+  transition: 0.4s ease-out;
+}
+
+.results .result h3:hover {
+  background: #fff;
+  color: #223343;
+}
