--- a/src/App.css
+++ b/src/App.css
@@ -24,28 +24,32 @@ header h1 {
 
 main {
   width: 100%;
-  max-width: 60%;
+  max-width: 80%;
   margin: 0 auto;
 }
 
 .results {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 -15px;
+  /* margin: 0 -15px; */
 }
 
 .results .result {
-  width: 33.333%;
+  width: 20%;
   min-width: 250px;
-  padding: 15px;
+  border-radius: 8px;
+  max-height: 500px;
+  /* padding: 15px; */
+  margin: 20px 25px;
   display: flex;
   flex-direction: column;
   cursor: pointer;
 }
 
 .results .result img {
-  display: block;
+  /* display: block; */
   width: 100%;
+  height: 350px;
 }
 
 .results .result h3 {
@@ -61,6 +65,7 @@ main {
 .results .result h3:hover {
   background: #fff;
   color: #223343;
+  box-shadow: 0 0 8px 3px #4484c4;
 }
 
 .detail {
