--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,11 +1,18 @@
+.search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem 0;
+}
+
 .search {
-  width: 100%;
+  width: 60%;
   display: block;
   padding: 15px;
   border: none;
   outline: none;
   background: none;
-  background-color: beige;
+  background-color: #fff;
   border-radius: 8px;
   color: dimgrey;
   font-size: 20px;
