--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,7 @@ main {
   padding: 25px;
   background: #000000;
   color: #fff;
+  overflow-y: scroll;
 }
 
 .detail .content h2 {
@@ -176,5 +177,43 @@ main {
 @media screen and (max-width: 643px) {
   .results .result {
     margin: 15px;
+  }
+}
+
+@media screen and (max-width: 410px) {
+  header h1 {
+    font-size: 2.9rem;
+  }
+
+  .results {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .detail {
+    overflow-y: scroll;
+  }
+
+  .detail .content .close {
+    width: 60%;
+  }
+
+  .detail .content span {
+    margin-left: 0.5rem;
+  }
+
+  .detail .content h2 {
+    padding-left: 0.5rem;
+    font-size: 2.5rem;
+  }
+
+  .detail .content .rating {
+    margin-left: 0.5rem;
+  }
+
+  .detail .content .about img {
+    margin-left: 0.5rem;
   }
 }
