--- a/src/App.css
+++ b/src/App.css
@@ -149,14 +149,12 @@ main {
 }
 
 .detail .content .close {
-  display: inline-block;
-  margin-left: 2rem;
+  /* display: inline-block; */
   padding: 15px 30px;
   font-size: 18px;
-  width: 1400px;
-  margin-top: 3rem;
+  /* margin-top: 3rem;
   margin-right: 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1rem; */
   font-weight: 700;
   background: #223343;
   color: #fff;
@@ -166,6 +164,14 @@ main {
   appearance: none;
   cursor: pointer;
   transition: 0.4s ease-out;
+
+  width: 100%;
+  display: flex;
+  margin: auto;
+  margin-top: 5rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
 }
 
 .detail .content button:hover {
@@ -180,6 +186,15 @@ main {
   .results {
     justify-content: center;
     align-items: center;
+  }
+
+  .detail .content .close {
+    width: 100%;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
   }
 }
 
